[change] is_return_vector -> should_return_vector [change] openapiのペルソナの型をarray of numberとした
