# openapi.yaml
@@ -94,7 +94,7 @@ paths:
                   properties:
                     sentence:
                       type: string
-                    is_return_vector:
+                    should_return_vector:
                       type: boolean
 
                 - type: object
@@ -129,7 +129,7 @@ paths:
               セットした結果も得たい場合:
                 value:
                   sentence: "今日はいい天気ですわ"
-                  is_return_vector: true
+                  should_return_vector: true
       responses:
         200:
           description: successful operation
@@ -145,7 +145,7 @@ paths:
                   persona_vector:
                     type: array
                     items:
-                      type: integer
+                      type: number
                     description: セットしたペルソナベクトルが入ります．
                     nullable: true
                   success:
@@ -228,7 +228,7 @@ paths:
                   persona_vector:
                     type: array
                     items:
-                      type: integer
+                      type: number
                     description: 抽出したペルソナベクトルが入ります．
                     nullable: true
                   success:
@@ -300,7 +300,7 @@ paths:
                   persona_vector:
                     type: array
                     items:
-                      type: integer
+                      type: number
                     description: 抽出したペルソナベクトルが入ります．
                     nullable: true
                   success:
@@ -361,7 +361,7 @@ paths:
                   persona_vector:
                     type: array
                     items:
-                      type: integer
+                      type: number
                     description: 抽出したペルソナベクトルが入ります．
                     nullable: true
                   success:
